# TheRiddler

./: LICENSE  README.md  pyproject.toml
bot/: __init__.py  __main__.py  bot_logging.py  settings.py
bot/cogs/: riddle.py
bot/services/: __init__.py  riddles.py
